@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

class FindFilterStringTokenizer {
  -input: String
  +tokenize(): List<Token>
}

class Token {
  +value: String
  +type: TokenType
}

enum TokenType {
  TERM,
  OPERATOR,
  PARENTHESIS
}

FindFilterStringTokenizer --> Token : produces >
Token --> TokenType : has >

@enduml
